# mc-mpi

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  RecvTiming.ipynb  TestLayer.ipynb  TestReadYaml.ipynb  TestTiming.ipynb  check.py  check.py.orig  config.yaml  config.yaml.orig  eze.py  intra-node.pkl  lukas.py  mc_mpi.sublime-project  mc_mpi.sublime-workspace  mkrelease  omp.py  py_data.pkl  run.batch  si34.nodelist  si36.nodelist  test  test.batch  test.yaml  test_layer.py  times_dynamic_1.npy  times_static_3.npy
cuda/: Makefile  bandwidthTest  deviceQuery
data/: WA_1000_1000000.out
graveyard/: layer.cpp
include/: async_comm.hpp  event_comm.hpp  graph.hpp  layer.hpp  logging.h  mcmpi_options.hpp  particle.hpp  particle_comm.hpp  random.hpp  spmat.c  timer.hpp  types.hpp  worker.hpp  yaml_dumper.hpp  yaml_loader.hpp
include/comm/: async_comm.hpp  latched_comm.hpp  particle_async_comm.hpp  particle_comm.hpp  particle_rma_comm.hpp  rma_comm.hpp  state_comm.hpp  stats.hpp
include/culayer/: culayer.hpp  culayer_kernel.hpp
include/curandom/: curandom.hpp
include/gpu_errcheck/: gpu_errcheck.hpp
include/layer/: layer.hpp
include/layer/private/: random.h
include/mcmpi/: gpu_detect.hpp  mcmpi_options.hpp  worker.hpp  worker_async.hpp  worker_old.hpp  worker_rma.hpp  worker_sync.hpp
include/random/: random.hpp
include/timer/: timer.hpp
include/types/: particle.hpp  types.hpp
scripts/: batch.py  batch_plot.py  intra-node-plot.py  intra-node.py  run.batch  run.py  save_run  time_var.pickle  time_var.py
sequential/: WA.out  dist_interaction.c  dist_sortie_couche.c  domaine.h  enable_all_partics.c  ens_partic.h  init_directions.c  init_domaine.c  init_poids.c  init_sig.c  main.c  mc_seq  mc_seq_graphics  output.c  prototypes.h  random.h  sortie_couche.c  types_mc.h
src/: Makefile  absorption.cpp  async_comm-impl.cpp  async_comm.cpp  culayer.cu  culayer_kernel.cu  curandom.cu  dist_interaction.cpp  dist_sortie_couche.cpp  gpu_detect.cpp  gpu_detect.cu  init_graines.cpp  init_positions.cpp  init_wa.cpp  interaction.cpp  latched_comm.cpp  layer.cpp  layer.cpp.orig  main.cpp  main_old.cpp  particle_async_comm.cpp  particle_comm.cpp  particle_rma_comm.cpp  random.cpp  rma_comm-impl.cpp  rma_comm.cpp  state_comm.cpp  stats.cpp  test.cpp  test_async_serialization.cpp  test_comm.cpp  test_cuatomic_add.cu  test_culayer.cu  test_curandom.cu  test_gpu_errcheck.cu  test_layer.cpp  test_layer_perf.cpp  test_layer_time_var.cpp  test_mcmpi_local.cpp  test_rma_serialization.cpp  (+10 more)
src_test/: rma_minimal_working_example.c  test_async_comm.cpp  test_async_serialization.cpp  test_comm.cpp  test_comm_perf.cpp  test_latched_comm.cpp  test_layer.cpp  test_layer_omp.cpp  test_layer_omp_perf.cpp  test_layer_perf.cpp  test_layer_target_WA.out  test_mpi_sync.cpp  test_mpi_sync_event.cpp  test_particle_step.cpp  test_recv_perf.cpp  test_rma_comm.cpp  test_rma_serialization.cpp  test_serialization.cpp  test_state_comm.cpp
test/: test_async_comm.cpp
tex/: TestTex.ipynb  commands.jinja.tex  header.jinja.tex  packages.jinja.tex  report  requirements.txt
tex/templates/multi_run/: multi_run.jinja.tex
tex/templates/single_run/: single_run.jinja.tex  single_run.py
toy_examples/: Makefile  array_in_struct  array_in_struct.cpp  assert.cpp  assert_debug  assert_release  async  async.c  coll_io  coll_io.cpp  hash.cpp  load_double  load_double.cpp  logging  logging.c  logging.h  logging.i  logging2.c  logging3  logging3.c  mpi_comm.c  mpi_test  mpi_test.c  mpi_test.cpp  particle_packing  particle_packing.cpp  rma01.c  rma02.c  test_logging  timing  timing.cpp
toy_examples/assert_debug.dSYM/Contents/: Info.plist
toy_examples/assert_debug.dSYM/Contents/Resources/DWARF/: assert_debug
